Fix some element misalignments and simplify code after Victor Martinez' layout work.

--- a/themes/reactos/static/css/style.blue.css
+++ b/themes/reactos/static/css/style.blue.css
@@ -2917,7 +2917,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 .navbar-brand {
   float: left;
-  padding-top: 5px;
+  padding: 5px 0 0 0;
   font-size: 18px;
   line-height: 20px;
   height: 62px;
@@ -3559,4 +3559,9 @@ a.list-group-item.active > .badge,
 .yamm .dropdown.yamm-fw .dropdown-menu {
   left: 15px;
   right: 15px;
+}
+
+/* ReactOS */
+#navbar > div {
+ padding: 0;
 }
